syntax = "proto3";

package ru.trx.grpc;

option java_multiple_files = true;
option java_package = "ru.trx.grpc.api";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc FindOrderById(OrderIdMsg) returns (OrderMsg) {

  }
}

message OrderMsg {
  string id = 1;
}

message OrderIdMsg {
  string id = 1;
}